--- a/src/global.scss
+++ b/src/global.scss
@@ -20,3 +20,13 @@ ul {
 a {
     text-decoration: none;
 }
+
+.searchInputs {
+    position: relative;
+    .searchIcon {
+        position: absolute;
+        top: 10%;
+        right: 5%;
+        cursor: pointer;
+    }
+}
